[gd_scene load_steps=7 format=3 uid="uid://cltre62dvxnsk"]

[ext_resource type="Texture2D" uid="uid://tsoxc08vbmom" path="res://art/icon.svg" id="1_18sl2"]
[ext_resource type="Script" path="res://towers/shock_tower/shock_tower.gd" id="1_qkfbt"]
[ext_resource type="PackedScene" uid="uid://o4hvytrvebhl" path="res://player/health_display.tscn" id="3_0qs1b"]
[ext_resource type="PackedScene" uid="uid://l51do8sx5uap" path="res://towers/tower_menu.tscn" id="4_6d12f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y48i7"]
size = Vector2(32, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_ou35e"]
radius = 125.0

[node name="ShockTower" type="StaticBody2D" node_paths=PackedStringArray("enemy_detector", "health_display", "tower_menu")]
collision_layer = 3
script = ExtResource("1_qkfbt")
enemy_detector = NodePath("EnemyDetector")
health_display = NodePath("HealthDisplay")
tower_menu = NodePath("TowerMenu")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.427451, 0.8, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_18sl2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_y48i7")

[node name="TowerMenu" parent="." instance=ExtResource("4_6d12f")]

[node name="HealthDisplay" parent="." instance=ExtResource("3_0qs1b")]
offset_left = -13.0
offset_top = -29.0
offset_right = 125.0
offset_bottom = 13.0
scale = Vector2(0.19, 0.095)

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_ou35e")

[node name="LoadTimer" type="Timer" parent="."]
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LoadTimer" to="." method="_on_load_timer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
